--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "analog-clock-react": "^1.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.13.0",
+    "react-analogue-clock": "^0.3.2",
+    "react-digital-clock": "^0.1.2",
+    "react-dom": "^16.13.0",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
