--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "react": "^16.13.0",
-    "react-analogue-clock": "^0.3.2",
+    "react-analog-clock": "^2.1.0",
     "react-digital-clock": "^0.1.2",
     "react-dom": "^16.13.0",
     "react-router-dom": "^6.2.1"
