--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment-timezone": "^0.5.34",
     "react": "^16.13.0",
     "react-analog-clock": "^2.1.0",
+    "react-bootstrap": "^2.1.2",
     "react-digital-clock": "^0.1.2",
     "react-dom": "^16.13.0",
     "react-router-dom": "^6.2.1"
